cabal-version:      2.4
name:               tlesniff
version:            0.1.0.0
author:             enferex
maintainer:         enferex
extra-source-files:
    README.md
    CHANGELOG.md

executable tlesniff
    default-language: Haskell2010
    main-is:        Main.hs
    hs-source-dirs: .
    other-modules:  TLE.Base, TLE.Database, TLE.Net
    build-depends:
      argparser ^>=0.3.4,
      base ^>=4.15.0.0,
      curl ^>=1.3.8,
      direct-sqlite ^>= 2.3.26,
      text,
      time
